--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webvue_boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/main.js",
   "scripts": {
     "dev": "webpack-dev-server --hot"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^3.7.0",
     "vue": "^2.2.1"
   },
   "devDependencies": {
